part-1/log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-ping-pong
          persistentVolumeClaim:
            claimName: ping-pong-claim
      containers:
        - name: log-output
          image: glassb3ad/log-output:1.3
          volumeMounts:
            - name: shared-ping-pong
              mountPath: /usr/src/app/files
