part-1/log-output/manifests/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: log-output
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: log-output
    spec:
      containers:
      - image: glassb3ad/log-output:1.1
        imagePullPolicy: IfNotPresent
        name: log-output
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
